--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "embla-carousel-react": "^8.0.0-rc19",
     "lucide-react": "^0.309.0",
     "next": "14.0.2",
+    "postcss-preset-env": "^9.3.0",
     "react": "^18",
     "react-dom": "^18",
     "sharp": "^0.33.2",
